--- a/sukoon-co/src/components/home/Hero/Hero.module.scss
+++ b/sukoon-co/src/components/home/Hero/Hero.module.scss
@@ -67,7 +67,7 @@
 }
 
 .headline {
-  font-size: clamp(60px, 9vw, 124px);
+  font-size: clamp(38px, 9vw, 124px);
   font-weight: 800;
   line-height: 0.92;
   letter-spacing: -0.04em;
